# LightZero

./: .buildinfo  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .readthedocs.yaml  ALPHAZERO_BATCH_IMPLEMENTATION_GUIDE.md  ALPHAZERO_BATCH_SUMMARY.md  Apptainer.def  CHANGELOG.md  CHANGELOG_MONITORING.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GAE_COMPUTATION_PLAN.md  GAME_README.md  MONITORING_ENHANCEMENTS.md  MONITORING_ENHANCEMENTS_MULTITASK.md  Makefile  PR_SUMMARY.md  QUICK_START.md  README.fork.md  README.md  README.zh.md  Untitled Diagram.drawio  cloc.sh  compile_batch_mcts.sh  conda_lz-mujoco_environment.yml  diff_output.txt  game_requirements.txt  genindex.html  index.html  index_zh.html  iter_policy_evaluation.py  jericho_priorzero_1020.yml  objects.inv  plane_game.py  py-modindex.html  pyproject.toml  pytest.ini  (+23 more)
.github/workflows/: badge.yml  deploy.yml  doc.yml  release.yml  release_test.yml  release_win.yml  test.yml  test_bkp.yml
_modules/: index.html
_sources/: index.rst.txt
analysis/: __init__.py  plot_analysis.py  plot_distributions.py  plot_envs.py  plot_runs.py  plot_spans.py  plot_world_model_analysis.py  run_analysis.py
api_doc/: index.html  index_zh.html
api_doc/agent/: index.html
api_doc/config/: index.html  meta.html
api_doc/entry/: index.html
api_doc/envs/: index.html
api_doc/mcts/: index.html
api_doc/model/: alphazero_model.html  common.html  efficientzero_model.html  efficientzero_model_mlp.html  index.html  muzero_model.html  muzero_model_mlp.html  sampled_efficientzero_model.html  sampled_efficientzero_model_mlp.html  stochastic_muzero_model.html  stochastic_muzero_model_mlp.html
api_doc/policy/: index.html
api_doc/worker/: index.html
core/config/: __init__.py  config.py
core/entry/: __init__.py  serial_entry_alphazero.py  serial_entry_alphazero_eval.py  serial_entry_efficicentzero.py  serial_entry_efficicentzero_eval.py  serial_entry_efficientzero.py  serial_entry_efficientzero_eval.py  serial_entry_efficientzero_expert_data.py  serial_entry_efficientzero_visualize.py  serial_entry_muzero.py  serial_entry_muzero_eval.py  serial_entry_muzero_expert_data.py  serial_entry_sampled_efficientzero.py  serial_entry_sampled_muzero.py
core/policy/: __init__.py  alphazero.py  base_policy.py  command_mode_policy_instance.py  efficientzero.py  efficientzero_expert_data.py  efficientzero_visualize.py  muzero.py  muzero_rnn.py  muzero_v2.py  (+2 more)
dev-buffer-log/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
dev-league/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
dev-middleware/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
dev-minigrid-mujoco/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
dev-mlp/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docs/: .gitignore  .readthedocs.yaml  KV_CACHE_BUG_FIXES_REPORT.md  KV_CACHE_CONFIG_GUIDE.md  KV_CACHE_INTEGRATION_ANALYSIS.md  KV_CACHE_REFACTORING_SUMMARY.md  Makefile  PHASE1_5_COMPLETION_REPORT.md  PHASE1_5_FULL_REPORT.md  PHASE1_5_HOTFIX_BACKWARD_COMPATIBILITY.md  PHASE1_5_IMPLEMENTATION_GUIDE.md  PHASE1_5_VALIDATION_COMPLETE.md  PHASE1_6_BUG_FIXES_REPORT.md  PHASE1_INTEGRATION_REPORT.md  README.md  README_KV_CACHE.md  async_pipeline_muzero_unizero.md  async_pipeline_muzero_unizero_zh.md  diagrams.mk  kv_cache_refactoring_analysis.md  kv_cache_refactoring_guide.md  lunarlander_ppo_online_flow.md  main_page.html  requirements.txt  test_results.txt
eval_cython-cpp_cython_jax/: eval_cython-cpp_cython_jax.py
eval_jax_cpp/: eval_cython_cython-cpp_jax.py
examples/: monitoring_usage_example.py
loss_landscape_core/: QUICKSTART.md  README.md  __init__.py
lzero/: Tool.py  eval.py
lzero/mcts/ctree/alphazero/pybind11_test/: CMakeLists.txt  test_pybind11_example.py
lzero/mcts/ctree/ctree_gumbel_alphazero/: CMakeLists.txt  CMakeLists_mcts.txt  CMakeLists_node.txt  make.sh  mcts_gumbel_alphazero.cpp  node_gumbel_alphazero.cpp  node_gumbel_alphazero.h  test_mcts_gumbel_alphazero.py  test_node_gumbel_alphazero.py
lzero/mcts/ctree/ctree_gumbel_alphazero/test/: eval_mcts_gumbel_alphazero.py  eval_node_gumbel_alphazero.py
main/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
polish-az-gomoku/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
polish-cfgs/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
polish-model/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
polish-tree/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
reports/: unizero_kv_cache_review_260622.md
scripts/: run_adaptive_unizero.sbatch  run_hybrid_unizero.sbatch  run_local_unizero.sbatch  run_unizero.sbatch  run_vanilla_muzero.sbatch  run_vanilla_unizero.sbatch  setup.sh
tests/: test_actual_config_initialization.py  test_kv_cache_consistency.py  test_kv_cache_manager.py  test_kv_cache_switch_simple.py  test_kv_cache_system_switch.py  test_phase1_5_hotfix.py  test_phase1_5_storage_integration.py  test_train_muzero_segment_async.py  test_world_model_kv_integration.py
toy/: multitask_gating_experiment_version.py
v0.0.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
zoo/: README.md  compute_normalized_mean_and_median.py  eval_benchmark.py  eval_benchmark_pool.py
(+2405 files in other folders)
